[package]
name = "versio"
version = "0.8.0"
authors = ["Charlie Ozinga <ozchaz@gmail.com>"]
edition = "2021"
description = "Versio is a tool to manage and publish project versions."
homepage = "https://github.com/chaaz/versio/"
repository = "https://github.com/chaaz/versio/"
license-file = "LICENSE.txt"
keywords = ["publish", "version", "development", "deploy", "release"]
categories = ["command-line-utilities", "config"]

[dependencies]
anyhow = "1.0.68"
chrono = "0.4.22"
clap = { version = "4.0.18", features = ["wrap_help", "cargo", "derive"] }
dirs = "4.0.0"
git2 = "0.15.0"
glob = "0.3.0"
hyper = { version = "0.14.22", features = ["client", "http1", "http2", "tcp"] }
ignore = "0.4.18"
liquid = "0.26.0"
octocrab = "0.17.0"
path-slash = "0.2.1"
regex = "1.6.0"
schemars = "0.8.11"
serde_json = "1.0.87"
serde = { version = "1.0.147", features = ["derive"] }
serde_yaml = "0.9.14"
tokio = { version = "1.21.2", features = ["rt", "rt-multi-thread"] }
toml = "0.5.9"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
xmlparser = "0.13.5"
yaml-rust = "0.4.5"

[dependencies.sequoia-openpgp]
version = "1.18.0"
default-features = false
features = ["crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto"]

[lib]
name = "versio"
path = "src/lib.rs"

[[bin]]
name = "versio"
path = "src/main.rs"
doc = false
