[package]
name = "versio"
version = "0.8.5"
authors = ["Charlie Ozinga <ozchaz@gmail.com>"]
edition = "2021"
description = "Versio is a tool to manage and publish project versions."
homepage = "https://github.com/chaaz/versio/"
repository = "https://github.com/chaaz/versio/"
license-file = "LICENSE.txt"
keywords = ["publish", "version", "development", "deploy", "release"]
categories = ["command-line-utilities", "config"]

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["wrap_help", "cargo", "derive"] }
dirs = "6.0.0"
git2 = "0.20.2"
glob = "0.3.2"
hyper = { version = "1.6.0", features = ["server", "client", "http1", "http2"] }
ignore = "0.4.23"
liquid = "0.26.11"
octocrab = "0.44.1"
path-slash = "0.2.1"
regex = "1.11.1"
reqwest = { version = "0.12.15" }
schemars = "0.9.0"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread"] }
toml = "0.8.23"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
xmlparser = "0.13.6"
yaml-rust = "0.4.5"

[dependencies.sequoia-openpgp]
version = "2.0.0"
default-features = false
features = ["crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto"]

[lib]
name = "versio"
path = "src/lib.rs"

[[bin]]
name = "versio"
path = "src/main.rs"
doc = false
